# src/Api/Http/Router/User.routes.ts
@@ -3,6 +3,7 @@ import { DeleteUserController } from '@Api/Controllers/Users/DeleteUserControlle
 import { ReadAllUsersController } from '@Api/Controllers/Users/ReadAllUsersController';
 import { ReadUserByIdController } from '@Api/Controllers/Users/ReadUserByIdController';
 import { UpdateIsActiveController } from '@Api/Controllers/Users/UpdateIsActiveController';
+import { UpdateUserController } from '@Api/Controllers/Users/UpdateUserController';
 import { AuthorizedFlow } from '@Api/Extensions/AuthorizedFlow';
 import { Router } from 'express';
 
@@ -15,6 +16,7 @@ const readAllUsersController = new ReadAllUsersController();
 const readUserByIdController = new ReadUserByIdController();
 const updateIsActiveController = new UpdateIsActiveController();
 const deleteUserController = new DeleteUserController();
+const updateUserController = new UpdateUserController();
 
 userRouters.post('/', creteUserController.handle);
 userRouters.get('/', readAllUsersController.handle);
@@ -24,4 +26,10 @@ userRouters.delete('/',
   authorizedFlow.authenticateToken,
   authorizedFlow.authorizePermission('Client.Admin'),
   deleteUserController.handle
+);
+
+userRouters.patch("/",
+  authorizedFlow.authenticateToken,
+  authorizedFlow.authorizePermission('Client.Admin'),
+  updateUserController.handle
 );
