# src/Applications/DTOs/Requests/Auth/users/UPdateUserRequestDTO.ts
@@ -1,0 +1,7 @@
+export class UpdateUserRequestDTO {
+  id: string = '';
+  name: string = '';
+  password: string = '';
+  balance!: number;
+
+}
